--- a/web/package.json
+++ b/web/package.json
@@ -5,14 +5,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
+    "framer-motion": "^6.0.0",
     "next": "^13.0.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
-    "framer-motion": "^6.0.0",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.0",
+    "socket.io-client": "^4.6.1",
+    "swr": "^2.1.0",
     "tailwindcss": "^3.0.0"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^13.2.4",
+    "@types/react": "19.0.10",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.2.4",
+    "jest": "^29.5.0",
+    "postcss": "^8.4.21"
   },
   "repository": {
     "type": "git",
