--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - run: npm install
-    - run: npm test
+      - uses: actions/checkout@v3
+      - name: Install Node dependencies
+        run: npm install
+      - name: Run Madge to detect circular dependencies
+        run: npx madge --circular .
+      - name: Run tests
+        run: npm run test
