--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,227 @@
-fastapi>=0.68.0
-uvicorn[standard]>=0.15.0
-python-dotenv>=0.19.0
-openai
-chromadb
-numpy>=1.24.0
-networkx
-langchain
-langchain-openai
-langchain-community
-langchain-experimental
-pydantic>=1.8.2
-Flask==2.1.3
+aiodns==3.2.0
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiomultiprocess==0.9.1
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+argcomplete==3.6.0
+asgiref==3.8.1
+astpretty==3.0.0
+astroid==3.3.9
+async-timeout==4.0.3
+asyncio==3.4.3
+attrs==25.1.0
+backoff==2.2.1
+bc-detect-secrets==1.4.30
+bc-jsonpath-ng==1.5.9
+bc-python-hcl2==0.3.51
+bcrypt==4.3.0
+beartype==0.20.0
+beautifulsoup4==4.13.3
+black==25.1.0
+blinker==1.9.0
+boolean.py==4.0
+boto3==1.37.10
+botocore==1.37.10
+build==1.2.2.post1
+cached-property==2.0.1
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==2.1.1
+checkov==3.0.34
+cherry==3.0
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
+click-option-group==0.5.6
+cloudsplaining==0.8.0
+colorama==0.4.6
+coloredlogs==15.0.1
+ConfigArgParse==1.7
+contourpy==1.3.1
+cycler==0.12.1
+cyclonedx-python-lib==9.1.0
+dataclasses-json==0.6.7
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+dill==0.3.9
+distro==1.9.0
+docker==7.1.0
+dockerfile-parse==2.0.1
+dpath==2.1.3
+durationpy==0.9
+exceptiongroup==1.2.2
+fastapi==0.115.11
+filelock==3.17.0
+Flask
+flatbuffers==25.2.10
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+googleapis-common-protos==1.69.1
+greenlet==3.1.1
+grpcio==1.71.0
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.29.2
+humanfriendly==10.0
+idna==3.10
+igraph==0.10.8
+importlib_metadata==8.5.0
+importlib_resources==6.5.2
+isodate==0.7.2
+isort==6.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.8.2
+jmespath==1.0.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+junit-xml==1.9
+kiwisolver==1.4.8
+kubernetes==32.0.1
+langchain==0.3.20
+langchain-community==0.3.19
+langchain-core==0.3.43
+langchain-experimental==0.3.4
+langchain-openai==0.3.8
+langchain-text-splitters==0.3.6
+langsmith==0.3.13
+lark==1.2.2
+license-expression==30.4.1
+mando==0.7.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+mccabe==0.7.0
+mdurl==0.1.2
+mmh3==5.1.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+networkx==2.6.3
+numpy==2.2.3
+oauthlib==3.2.2
+onnxruntime==1.21.0
+openai==1.65.5
+opentelemetry-api==1.30.0
+opentelemetry-exporter-otlp-proto-common==1.30.0
+opentelemetry-exporter-otlp-proto-grpc==1.30.0
+opentelemetry-instrumentation==0.51b0
+opentelemetry-instrumentation-asgi==0.51b0
+opentelemetry-instrumentation-fastapi==0.51b0
+opentelemetry-proto==1.30.0
+opentelemetry-sdk==1.30.0
+opentelemetry-semantic-conventions==0.51b0
+opentelemetry-util-http==0.51b0
+orjson==3.10.15
+overrides==7.7.0
+packageurl-python==0.16.0
+packaging==24.2
+pandas==2.2.3
+pathspec==0.12.1
+pillow==11.1.0
+pinecone-client==6.0.0
+pinecone-plugin-interface==0.0.7
+platformdirs==4.3.6
+ply==3.11
+policy_sentry==0.14.0
+posthog==3.19.0
+prettytable==3.15.1
+propcache==0.3.0
+protobuf==5.29.3
+psutil==7.0.0
+psycopg2-binary==2.9.10
+py-serializable==2.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycares==4.5.0
+pycep-parser==0.4.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.8.1
+pydantic_core==2.27.2
+Pygments==2.19.1
+pylint==3.3.5
+pyparsing==3.2.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyston==2.3.5
+pyston-autoload==2.3.5
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.0.1
+pytz==2025.1
+PyYAML==6.0.2
+radon==6.0.1
+rdflib==7.1.3
+referencing==0.36.2
+regex==2024.11.6
 requests==2.28.1
-pandas>=2.0.0
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.23.1
+rsa==4.9
+rustworkx==0.16.0
+s3transfer==0.11.4
+schedule==1.2.2
+schema==0.7.7
 scikit-learn==1.1.3
-python-decouple
-flask>=2.0.0
-
-# Code analysis dependencies
-astpretty
-radon
-pylint
-black
-
-# Dependencies for Pinecone vector archiving
-pinecone-client>=2.2.1
-psycopg2-binary>=2.9.6
-schedule>=1.1.0
-
-# Dependencies for running benchmarks
-psutil>=5.9.5
-matplotlib>=3.7.1
-
-# Checkov for infrastructure scanning
-checkov>=2.3.234
+scipy==1.15.2
+semantic-version==2.10.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+spdx-tools==0.8.3
+SQLAlchemy==2.0.38
+starlette==0.46.1
+sympy==1.13.3
+tabulate==0.9.0
+tenacity==9.0.0
+termcolor==2.5.0
+texttable==1.7.0
+threadpoolctl==3.5.0
+tiktoken==0.9.0
+tokenizers==0.21.0
+tomli==2.2.1
+tomlkit==0.13.2
+tqdm==4.67.1
+typer==0.15.2
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.1
+unidiff==0.7.5
+update-checker==0.18.0
+uritools==4.0.3
+urllib3==1.26.20
+uvicorn==0.34.0
+uvloop==0.21.0
+watchfiles==1.0.4
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==1.0.1
+wrapt==1.17.2
+xmltodict==0.14.2
+yarl==1.18.3
+zipp==3.21.0
+zstandard==0.23.0
