--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,6 @@ venv/lib/python3.12/site-packages/torch/lib/libtorch_cpu.so
 venv/lib/python3.12/site-packages/torch/lib/libtorch_cpu.so
 code_review_results/bandit_results.txt
 react-app/node_modules/@swc/core-linux-x64-musl/swc.linux-x64-musl.node
+venv/lib/python3.12/site-packages/torch/lib/libtorch_cpu.so
+code_review_results/bandit_results.txt
+react-app/node_modules/@swc/core-linux-x64-musl/swc.linux-x64-musl.node
