--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,40 +1,29 @@
-<<<<<<< Tabnine <<<<<<<
 name: Build and Push Docker Image
 
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]//-
-  workflow_dispatch:  # Allows manual triggering//+
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  build://-
-  build-and-push://+
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3//-
-      - name: Checkout code//+
-        uses: actions/checkout@v3//+
-
-      - name: Login to Docker Registry//-
-      - name: Set up Docker Buildx//+
-        uses: docker/setup-buildx-action@v2//+
-//+
-      - name: Login to DockerHub//+
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          registry: docker.io//-
-          username: ${{ github.repository_owner }}//-
-          password: ${{ secrets.DOCKER_API_TOKEN }}//-
-          username: ${{ secrets.DOCKERHUB_USERNAME }}//+
-          password: ${{ secrets.DOCKERHUB_TOKEN }}//+
-
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Build and push
-        uses: docker/build-push-action@v4//-
-        uses: docker/build-push-action@v3//+
+        uses: docker/build-push-action@v3
         with:
-          context: .//+
+          context: .
           push: true
-          tags: ${{ github.repository }}:latest//-
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cherry:latest//+
->>>>>>> Tabnine >>>>>>>// {"source":"chat"}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cherry:latest
